# RSA-salaus

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py  keycreationmachine.py  keypair.py  message_processing.py  performance.py  ui.py
src/tests/: keycreationmachine_test.py  message_processing_test.py
