[tool.poetry]
name = "rsa-salaus"
version = "0.1.0"
description = "Harjoitustyö"
authors = ["Sonja Madetoja <sonja.madetoja@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.12.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
